--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "dash>=3.2.0",
+    "gunicorn>=23.0.0",
     "nbformat>=5.10.4",
     "pandas>=2.3.2",
 ]
